workshop/capstone/kubernetes/constraints/deny-prod-deployment-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyDeploymentInProdNamespaces
metadata:
  name: denydeployments-in-prod-ns
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
